--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,5 @@ addons/sourcemod/scripting/include/usermessages.inc
 addons/sourcemod/scripting/include/vector.inc
 addons/sourcemod/scripting/include/version_auto.inc
 addons/sourcemod/scripting/include/version.inc
+
+addons/sourcemod/scripting/demorai.sp
